syntax = "proto3";

service OrderProcessing {
  rpc placeOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
}

message PlaceOrderRequest {
  string productId = 1;
  int32 quantity = 2;
}

message PlaceOrderResponse {
  string orderId = 1;
}
