// orderProcessing.ts
import { PlaceOrderRequest, PlaceOrderResponse } from './proto/order_pb';

export function placeOrder(call: any, callback: any) {
  const request: PlaceOrderRequest = call.request;
  // Code to process order and generate orderId
  const orderId = '123456';
  const response = new PlaceOrderResponse();
  response.setOrderId(orderId);
  callback(null, response);
}
